统一 5k-7k 轨道颜色

--- a/-[ LITEST ]- projct. X/skin.ini
+++ b/-[ LITEST ]- projct. X/skin.ini
@@ -142,16 +142,16 @@ NoteImage0: mania/notes/blue
 NoteImage0H: mania/notes/blue
 NoteImage0L: mania/notes/noteL
 
-NoteImage1: mania/notes/blue-light
-NoteImage1H: mania/notes/blue-light
+NoteImage1: mania/notes/green-light
+NoteImage1H: mania/notes/green-light
 NoteImage1L: mania/notes/noteL
 
-NoteImage2: mania/notes/green
-NoteImage2H: mania/notes/green
+NoteImage2: mania/notes/blue-light
+NoteImage2H: mania/notes/blue-light
 NoteImage2L: mania/notes/noteL
 
-NoteImage3: mania/notes/blue-light
-NoteImage3H: mania/notes/blue-light
+NoteImage3: mania/notes/green-light
+NoteImage3H: mania/notes/green-light
 NoteImage3L: mania/notes/noteL
 
 NoteImage4: mania/notes/blue
