5-7k 改为类似 beatmania 的蓝白配色，微调 mania 布局，使用默认太鼓 note

--- a/-[ LITEST ]- _Shield/skin.ini
+++ b/-[ LITEST ]- _Shield/skin.ini
@@ -68,11 +68,11 @@ HyperDashFruit: 255,0,0,255
 [Mania]
 
 Keys: 4
-ColumnStart: 136
-ColumnWidth: 64,64,64,64
+ColumnStart: 170
+ColumnWidth: 58,58,58,58
 ColumnLineWidth: 0,0,0,0,0
 
-HitPosition: 430
+HitPosition: 420
 ScorePosition: 290
 ComboPosition: 250
 
@@ -114,11 +114,11 @@ NoteImage3T: mania/notes/noteT
 [Mania]
 
 Keys: 5
-ColumnStart: 136
-ColumnWidth: 64,64,64,64,64
+ColumnStart: 160
+ColumnWidth: 56,56,56,56,56
 ColumnLineWidth: 0,0,0,0,0,0
 
-HitPosition: 430
+HitPosition: 420
 ScorePosition: 290
 ComboPosition: 250
 
@@ -142,16 +142,16 @@ NoteImage0: mania/notes/blue
 NoteImage0H: mania/notes/blue
 NoteImage0L: mania/notes/noteL
 
-NoteImage1: mania/notes/green-light
-NoteImage1H: mania/notes/green-light
+NoteImage1: mania/notes/white
+NoteImage1H: mania/notes/white
 NoteImage1L: mania/notes/noteL
 
-NoteImage2: mania/notes/blue-light
-NoteImage2H: mania/notes/blue-light
+NoteImage2: mania/notes/blue
+NoteImage2H: mania/notes/blue
 NoteImage2L: mania/notes/noteL
 
-NoteImage3: mania/notes/green-light
-NoteImage3H: mania/notes/green-light
+NoteImage3: mania/notes/white
+NoteImage3H: mania/notes/white
 NoteImage3L: mania/notes/noteL
 
 NoteImage4: mania/notes/blue
@@ -168,11 +168,11 @@ NoteImage4T: mania/notes/noteT
 
 Keys: 6
 ColumnStart: 136
-ColumnWidth: 56,56,56,56,56,56
-ColumnLineWidth: 0,0,0,1,0,0,0
-ColumnSpacing: 0,0,1,0,0
+ColumnWidth: 48,48,48,48,48,48
+ColumnLineWidth: 0,0,0,0,0,0,0
+ColumnSpacing: 0,0,0,0,0
 
-HitPosition: 430
+HitPosition: 420
 ScorePosition: 290
 ComboPosition: 250
 
@@ -194,28 +194,28 @@ KeyImage5: mania/keys/k
 KeyImage5D: mania/keys/kd
 
 //  Notes
-NoteImage0: mania/notes/blue-light
-NoteImage0H: mania/notes/blue-light
+NoteImage0: mania/notes/white
+NoteImage0H: mania/notes/white
 NoteImage0L: mania/notes/noteL
 
 NoteImage1: mania/notes/blue
 NoteImage1H: mania/notes/blue
 NoteImage1L: mania/notes/noteL
 
-NoteImage2: mania/notes/green-light
-NoteImage2H: mania/notes/green-light
+NoteImage2: mania/notes/white
+NoteImage2H: mania/notes/white
 NoteImage2L: mania/notes/noteL
 
-NoteImage3: mania/notes/green-light
-NoteImage3H: mania/notes/green-light
+NoteImage3: mania/notes/white
+NoteImage3H: mania/notes/white
 NoteImage3L: mania/notes/noteL
 
 NoteImage4: mania/notes/blue
 NoteImage4H: mania/notes/blue
 NoteImage4L: mania/notes/noteL
 
-NoteImage5: mania/notes/blue-light
-NoteImage5H: mania/notes/blue-light
+NoteImage5: mania/notes/white
+NoteImage5H: mania/notes/white
 NoteImage5L: mania/notes/noteL
 
 NoteImage0T: mania/notes/noteT
@@ -229,11 +229,11 @@ NoteImage5T: mania/notes/noteT
 
 Keys: 7
 ColumnStart: 136
-ColumnWidth: 52,52,52,52,52,52,52
-ColumnLineWidth: 0,0,0,1,1,0,0,0
-ColumnSpacing: 0,0,1,1,0,0
+ColumnWidth: 48,48,48,48,48,48,48
+ColumnLineWidth: 0,0,0,0,0,0,0,0
+ColumnSpacing: 0,0,0,0,0,0
 
-HitPosition: 430
+HitPosition: 420
 ScorePosition: 290
 ComboPosition: 250
 
@@ -257,32 +257,32 @@ KeyImage6: mania/keys/k
 KeyImage6D: mania/keys/kd
 
 //  Notes
-NoteImage0: mania/notes/blue-light
-NoteImage0H: mania/notes/blue-light
+NoteImage0: mania/notes/white
+NoteImage0H: mania/notes/white
 NoteImage0L: mania/notes/noteL
 
 NoteImage1: mania/notes/blue
 NoteImage1H: mania/notes/blue
 NoteImage1L: mania/notes/noteL
 
-NoteImage2: mania/notes/green-light
-NoteImage2H: mania/notes/green-light
+NoteImage2: mania/notes/white
+NoteImage2H: mania/notes/white
 NoteImage2L: mania/notes/noteL
 
-NoteImage3: mania/notes/blue-light
-NoteImage3H: mania/notes/blue-light
+NoteImage3: mania/notes/blue
+NoteImage3H: mania/notes/blue
 NoteImage3L: mania/notes/noteL
 
-NoteImage4: mania/notes/green-light
-NoteImage4H: mania/notes/green-light
+NoteImage4: mania/notes/white
+NoteImage4H: mania/notes/white
 NoteImage4L: mania/notes/noteL
 
 NoteImage5: mania/notes/blue
 NoteImage5H: mania/notes/blue
 NoteImage5L: mania/notes/noteL
 
-NoteImage6: mania/notes/blue-light
-NoteImage6H: mania/notes/blue-light
+NoteImage6: mania/notes/white
+NoteImage6H: mania/notes/white
 NoteImage6L: mania/notes/noteL
 
 NoteImage0T: mania/notes/noteT
