轨道从左边调整到靠近中间，中间轨改用黄色 note

--- a/-[ LITEST ]- projct. X/skin.ini
+++ b/-[ LITEST ]- projct. X/skin.ini
@@ -22,14 +22,14 @@ Version: latest
 
 [Colours]
 
-// 	Combo 
+// 	Combo
 
 Combo1: 170,236,255
 Combo2: 255,155,184
 Combo3: 255,245,178
 Combo4: 184,255,177
 
-// 	Slider 
+// 	Slider
 SliderBorder: 96,97,103
 SliderTrackOverride: 47,49,68
 
@@ -68,8 +68,8 @@ HyperDashFruit: 255,0,0,255
 [Mania]
 
 Keys: 4
-ColumnStart: 170
-ColumnWidth: 58,58,58,58
+ColumnStart: 300
+ColumnWidth: 56,56,56,56
 ColumnLineWidth: 0,0,0,0,0
 
 HitPosition: 420
@@ -90,20 +90,20 @@ KeyImage3: mania/keys/k
 KeyImage3D: mania/keys/kd
 
 //  Notes
-NoteImage0: mania/notes/blue-light
-NoteImage0H: mania/notes/blue
+NoteImage0: mania/notes/white
+NoteImage0H: mania/notes/white
 NoteImage0L: mania/notes/noteL
 
 NoteImage1: mania/notes/blue-light
-NoteImage1H: mania/notes/blue
+NoteImage1H: mania/notes/blue-light
 NoteImage1L: mania/notes/noteL
 
 NoteImage2: mania/notes/blue-light
-NoteImage2H: mania/notes/blue
+NoteImage2H: mania/notes/blue-light
 NoteImage2L: mania/notes/noteL
 
-NoteImage3: mania/notes/blue-light
-NoteImage3H: mania/notes/blue
+NoteImage3: mania/notes/white
+NoteImage3H: mania/notes/white
 NoteImage3L: mania/notes/noteL
 
 NoteImage0T: mania/notes/noteT
@@ -114,7 +114,7 @@ NoteImage3T: mania/notes/noteT
 [Mania]
 
 Keys: 5
-ColumnStart: 160
+ColumnStart: 260
 ColumnWidth: 56,56,56,56,56
 ColumnLineWidth: 0,0,0,0,0,0
 
@@ -146,8 +146,8 @@ NoteImage1: mania/notes/white
 NoteImage1H: mania/notes/white
 NoteImage1L: mania/notes/noteL
 
-NoteImage2: mania/notes/blue
-NoteImage2H: mania/notes/blue
+NoteImage2: mania/notes/yellow
+NoteImage2H: mania/notes/yellow
 NoteImage2L: mania/notes/noteL
 
 NoteImage3: mania/notes/white
@@ -167,7 +167,7 @@ NoteImage4T: mania/notes/noteT
 [Mania]
 
 Keys: 6
-ColumnStart: 136
+ColumnStart: 260
 ColumnWidth: 48,48,48,48,48,48
 ColumnLineWidth: 0,0,0,0,0,0,0
 ColumnSpacing: 0,0,0,0,0
@@ -228,7 +228,7 @@ NoteImage5T: mania/notes/noteT
 [Mania]
 
 Keys: 7
-ColumnStart: 136
+ColumnStart: 240
 ColumnWidth: 48,48,48,48,48,48,48
 ColumnLineWidth: 0,0,0,0,0,0,0,0
 ColumnSpacing: 0,0,0,0,0,0
@@ -269,8 +269,8 @@ NoteImage2: mania/notes/white
 NoteImage2H: mania/notes/white
 NoteImage2L: mania/notes/noteL
 
-NoteImage3: mania/notes/blue
-NoteImage3H: mania/notes/blue
+NoteImage3: mania/notes/yellow
+NoteImage3H: mania/notes/yellow
 NoteImage3L: mania/notes/noteL
 
 NoteImage4: mania/notes/white
