--- a/-[ LITEST ]- prjct. X/skin.ini
+++ b/-[ LITEST ]- prjct. X/skin.ini
@@ -202,12 +202,12 @@ NoteImage1: mania/notes/blue
 NoteImage1H: mania/notes/blue
 NoteImage1L: mania/notes/noteL
 
-NoteImage2: mania/notes/white
-NoteImage2H: mania/notes/white
+NoteImage2: mania/notes/yellow
+NoteImage2H: mania/notes/yellow
 NoteImage2L: mania/notes/noteL
 
-NoteImage3: mania/notes/white
-NoteImage3H: mania/notes/white
+NoteImage3: mania/notes/yellow
+NoteImage3H: mania/notes/yellow
 NoteImage3L: mania/notes/noteL
 
 NoteImage4: mania/notes/blue
