(mania) ln bodies use the color of the head but darker

--- a/-[ LITEST ]- prjct. X/skin.ini
+++ b/-[ LITEST ]- prjct. X/skin.ini
@@ -93,24 +93,23 @@ KeyImage3D: mania/keys/kd
 //  Notes
 NoteImage0: mania/notes/white
 NoteImage0H: mania/notes/white
-NoteImage0L: mania/notes/noteL
+NoteImage0L: mania/notes/noteL-white
+NoteImage0T: mania/notes/noteT-white
 
 NoteImage1: mania/notes/white
 NoteImage1H: mania/notes/white
-NoteImage1L: mania/notes/noteL
+NoteImage1L: mania/notes/noteL-white
+NoteImage1T: mania/notes/noteT-white
 
 NoteImage2: mania/notes/blue
 NoteImage2H: mania/notes/blue
-NoteImage2L: mania/notes/noteL
+NoteImage2L: mania/notes/noteL-blue
+NoteImage2T: mania/notes/noteT-blue
 
 NoteImage3: mania/notes/blue
 NoteImage3H: mania/notes/blue
-NoteImage3L: mania/notes/noteL
-
-NoteImage0T: mania/notes/noteT
-NoteImage1T: mania/notes/noteT
-NoteImage2T: mania/notes/noteT
-NoteImage3T: mania/notes/noteT
+NoteImage3L: mania/notes/noteL-blue
+NoteImage3T: mania/notes/noteT-blue
 
 [Mania]
 
@@ -142,29 +141,28 @@ KeyImage4D: mania/keys/kd
 //  Notes
 NoteImage0: mania/notes/white
 NoteImage0H: mania/notes/white
-NoteImage0L: mania/notes/noteL
+NoteImage0L: mania/notes/noteL-white
+NoteImage0T: mania/notes/noteT-white
 
 NoteImage1: mania/notes/white
 NoteImage1H: mania/notes/white
-NoteImage1L: mania/notes/noteL
+NoteImage1L: mania/notes/noteL-white
+NoteImage1T: mania/notes/noteT-white
 
 NoteImage2: mania/notes/yellow
 NoteImage2H: mania/notes/yellow
-NoteImage2L: mania/notes/noteL
+NoteImage2L: mania/notes/noteL-yellow
+NoteImage2T: mania/notes/noteT-yellow
 
 NoteImage3: mania/notes/blue
 NoteImage3H: mania/notes/blue
-NoteImage3L: mania/notes/noteL
+NoteImage3L: mania/notes/noteL-blue
+NoteImage3T: mania/notes/noteT-blue
 
 NoteImage4: mania/notes/blue
 NoteImage4H: mania/notes/blue
-NoteImage4L: mania/notes/noteL
-
-NoteImage0T: mania/notes/noteT
-NoteImage1T: mania/notes/noteT
-NoteImage2T: mania/notes/noteT
-NoteImage3T: mania/notes/noteT
-NoteImage4T: mania/notes/noteT
+NoteImage4L: mania/notes/noteL-blue
+NoteImage4T: mania/notes/noteT-blue
 
 [Mania]
 
@@ -198,34 +196,33 @@ KeyImage5D: mania/keys/kd
 //  Notes
 NoteImage0: mania/notes/white
 NoteImage0H: mania/notes/white
-NoteImage0L: mania/notes/noteL
+NoteImage0L: mania/notes/noteL-white
+NoteImage0T: mania/notes/noteT-white
 
 NoteImage1: mania/notes/white
 NoteImage1H: mania/notes/white
-NoteImage1L: mania/notes/noteL
+NoteImage1L: mania/notes/noteL-white
+NoteImage1T: mania/notes/noteT-white
 
 NoteImage2: mania/notes/white
 NoteImage2H: mania/notes/white
-NoteImage2L: mania/notes/noteL
+NoteImage2L: mania/notes/noteL-white
+NoteImage2T: mania/notes/noteT-white
 
 NoteImage3: mania/notes/blue
 NoteImage3H: mania/notes/blue
-NoteImage3L: mania/notes/noteL
+NoteImage3L: mania/notes/noteL-blue
+NoteImage3T: mania/notes/noteT-blue
 
 NoteImage4: mania/notes/blue
 NoteImage4H: mania/notes/blue
-NoteImage4L: mania/notes/noteL
+NoteImage4L: mania/notes/noteL-blue
+NoteImage4T: mania/notes/noteT-blue
 
 NoteImage5: mania/notes/blue
 NoteImage5H: mania/notes/blue
-NoteImage5L: mania/notes/noteL
-
-NoteImage0T: mania/notes/noteT
-NoteImage1T: mania/notes/noteT
-NoteImage2T: mania/notes/noteT
-NoteImage3T: mania/notes/noteT
-NoteImage4T: mania/notes/noteT
-NoteImage5T: mania/notes/noteT
+NoteImage5L: mania/notes/noteL-blue
+NoteImage5T: mania/notes/noteT-blue
 
 [Mania]
 
@@ -261,36 +258,35 @@ KeyImage6D: mania/keys/kd
 //  Notes
 NoteImage0: mania/notes/white
 NoteImage0H: mania/notes/white
-NoteImage0L: mania/notes/noteL
+NoteImage0L: mania/notes/noteL-white
+NoteImage0T: mania/notes/noteT-white
 
 NoteImage1: mania/notes/white
 NoteImage1H: mania/notes/white
-NoteImage1L: mania/notes/noteL
+NoteImage1L: mania/notes/noteL-white
+NoteImage1T: mania/notes/noteT-white
 
 NoteImage2: mania/notes/white
 NoteImage2H: mania/notes/white
-NoteImage2L: mania/notes/noteL
+NoteImage2L: mania/notes/noteL-white
+NoteImage2T: mania/notes/noteT-white
 
 NoteImage3: mania/notes/yellow
 NoteImage3H: mania/notes/yellow
-NoteImage3L: mania/notes/noteL
+NoteImage3L: mania/notes/noteL-yellow
+NoteImage3T: mania/notes/noteT-yellow
 
 NoteImage4: mania/notes/blue
 NoteImage4H: mania/notes/blue
-NoteImage4L: mania/notes/noteL
+NoteImage4L: mania/notes/noteL-blue
+NoteImage4T: mania/notes/noteT-blue
 
 NoteImage5: mania/notes/blue
 NoteImage5H: mania/notes/blue
-NoteImage5L: mania/notes/noteL
+NoteImage5L: mania/notes/noteL-blue
+NoteImage5T: mania/notes/noteT-blue
 
 NoteImage6: mania/notes/blue
 NoteImage6H: mania/notes/blue
-NoteImage6L: mania/notes/noteL
-
-NoteImage0T: mania/notes/noteT
-NoteImage1T: mania/notes/noteT
-NoteImage2T: mania/notes/noteT
-NoteImage3T: mania/notes/noteT
-NoteImage4T: mania/notes/noteT
-NoteImage5T: mania/notes/noteT
-NoteImage6T: mania/notes/noteT
+NoteImage6L: mania/notes/noteL-blue
+NoteImage6T: mania/notes/noteT-blue
