--- a/-[ LITEST ]- prjct. X/skin.ini
+++ b/-[ LITEST ]- prjct. X/skin.ini
@@ -1,8 +1,7 @@
 [General]
-
 Name: -[ LITEST ]- prjct. X
 Author: Many others & Purple4pur
-
+//{{{
 // 	Cursor
 CursorRotate: 0
 CursorExpand: 0
@@ -19,11 +18,11 @@ SliderStyle: 3
 
 //  Others
 Version: latest
+//}}}
 
 [Colours]
-
+//{{{
 // 	Combo
-
 Combo1: 170,236,255
 Combo2: 255,155,184
 Combo3: 255,245,178
@@ -44,9 +43,10 @@ SongSelectInactiveText: 250,250,250
 
 // 	Gameplay
 InputOverlayText: 255,255,255
+//}}}
 
 [Fonts]
-
+//{{{
 // 	Hitcircle
 HitCirclePrefix: fonts/default/default
 HitCircleOverlap: 23
@@ -58,20 +58,22 @@ ScoreOverlap: -2
 // 	Combo
 ComboPrefix: fonts/combo_numbers/combo
 ComboOverlap: -2
+//}}}
 
 [CatchTheBeat]
-
+//{{{
 HyperDash: 250,250,250,255
 HyperDashAfterImage: 106,69,193,100
 HyperDashFruit: 255,0,0,255
+//}}}
 
 [Mania]
-
 Keys: 4
-ColumnStart: 320
-ColumnWidth: 52,52,52,52
+//{{{
+ColumnStart: 318
+ColumnWidth: 50,50,50,50
 ColumnLineWidth: 0,0,0,0,0
-ColumnSpacing: 3,3,3
+ColumnSpacing: 4,8,4
 
 HitPosition: 420
 ScorePosition: 290
@@ -110,14 +112,15 @@ NoteImage3: mania/notes/blue
 NoteImage3H: mania/notes/blue
 NoteImage3L: mania/notes/noteL-blue
 NoteImage3T: mania/notes/noteT-blue
+//}}}
 
 [Mania]
-
 Keys: 5
-ColumnStart: 290
+//{{{
+ColumnStart: 286
 ColumnWidth: 50,50,50,50,50
 ColumnLineWidth: 0,0,0,0,0,0
-ColumnSpacing: 2,2,2,2
+ColumnSpacing: 4,4,4,4
 
 HitPosition: 420
 ScorePosition: 290
@@ -163,14 +166,15 @@ NoteImage4: mania/notes/blue
 NoteImage4H: mania/notes/blue
 NoteImage4L: mania/notes/noteL-blue
 NoteImage4T: mania/notes/noteT-blue
+//}}}
 
 [Mania]
-
 Keys: 6
-ColumnStart: 275
+//{{{
+ColumnStart: 270
 ColumnWidth: 48,48,48,48,48,48
 ColumnLineWidth: 0,0,0,0,0,0,0
-ColumnSpacing: 2,2,2,2,2
+ColumnSpacing: 2,10,2,10,2
 
 HitPosition: 420
 ScorePosition: 290
@@ -223,14 +227,15 @@ NoteImage5: mania/notes/blue
 NoteImage5H: mania/notes/blue
 NoteImage5L: mania/notes/noteL-blue
 NoteImage5T: mania/notes/noteT-blue
+//}}}
 
 [Mania]
-
 Keys: 7
-ColumnStart: 265
-ColumnWidth: 44,44,44,44,44,44,44
+//{{{
+ColumnStart: 254
+ColumnWidth: 46,46,46,46,46,46,46
 ColumnLineWidth: 0,0,0,0,0,0,0,0
-ColumnSpacing: 2,2,2,2,2,2
+ColumnSpacing: 2,8,2,2,8,2
 
 HitPosition: 420
 ScorePosition: 290
@@ -290,3 +295,81 @@ NoteImage6: mania/notes/blue
 NoteImage6H: mania/notes/blue
 NoteImage6L: mania/notes/noteL-blue
 NoteImage6T: mania/notes/noteT-blue
+//}}}
+
+[Mania]
+Keys: 8
+//{{{
+ColumnStart: 232
+ColumnWidth: 44,44,44,44,44,44,44,44
+ColumnLineWidth: 0,0,0,0,0,0,0,0,0
+ColumnSpacing: 2,8,2,12,2,8,2
+
+HitPosition: 420
+ScorePosition: 290
+ComboPosition: 250
+
+JudgementLine: 0
+KeysUnderNotes: 1
+
+//  Keys
+KeyImage0: mania/keys/k
+KeyImage0D: mania/keys/kd
+KeyImage1: mania/keys/k
+KeyImage1D: mania/keys/kd
+KeyImage2: mania/keys/k
+KeyImage2D: mania/keys/kd
+KeyImage3: mania/keys/k
+KeyImage3D: mania/keys/kd
+KeyImage4: mania/keys/k
+KeyImage4D: mania/keys/kd
+KeyImage5: mania/keys/k
+KeyImage5D: mania/keys/kd
+KeyImage6: mania/keys/k
+KeyImage6D: mania/keys/kd
+KeyImage7: mania/keys/k
+KeyImage7D: mania/keys/kd
+
+//  Notes
+NoteImage0: mania/notes/white
+NoteImage0H: mania/notes/white
+NoteImage0L: mania/notes/noteL-white
+NoteImage0T: mania/notes/noteT-white
+
+NoteImage1: mania/notes/white
+NoteImage1H: mania/notes/white
+NoteImage1L: mania/notes/noteL-white
+NoteImage1T: mania/notes/noteT-white
+
+NoteImage2: mania/notes/white
+NoteImage2H: mania/notes/white
+NoteImage2L: mania/notes/noteL-white
+NoteImage2T: mania/notes/noteT-white
+
+NoteImage3: mania/notes/yellow
+NoteImage3H: mania/notes/yellow
+NoteImage3L: mania/notes/noteL-yellow
+NoteImage3T: mania/notes/noteT-yellow
+
+NoteImage4: mania/notes/yellow
+NoteImage4H: mania/notes/yellow
+NoteImage4L: mania/notes/noteL-yellow
+NoteImage4T: mania/notes/noteT-yellow
+
+NoteImage5: mania/notes/blue
+NoteImage5H: mania/notes/blue
+NoteImage5L: mania/notes/noteL-blue
+NoteImage5T: mania/notes/noteT-blue
+
+NoteImage6: mania/notes/blue
+NoteImage6H: mania/notes/blue
+NoteImage6L: mania/notes/noteL-blue
+NoteImage6T: mania/notes/noteT-blue
+
+NoteImage7: mania/notes/blue
+NoteImage7H: mania/notes/blue
+NoteImage7L: mania/notes/noteL-blue
+NoteImage7T: mania/notes/noteT-blue
+//}}}
+
+// vim: ft=confini fdm=marker
