(mania) column width; (flavor) skin.ini breakdown into [osu,mania,...] parts

--- a/-[ LITEST ]- all-in-one/flavor/_Shield/skin.osu.ini
+++ b/-[ LITEST ]- all-in-one/flavor/_Shield/skin.osu.ini
@@ -1,61 +1,55 @@
-[General]
-Name: -[ LITEST ]- _Shield
-Author: Many others & Purple4pur
-//{{{
-// 	Cursor
+
+// Current skin flavor: _Shield
+
+// cursor
 CursorRotate: 0
 CursorExpand: 0
 CursorCentre: 1
 
-//  Hitcircle
+// hitcircle
 HitCircleOverlayAboveNumber: 1
 
-// 	Slider
+// slider
 AllowSliderBallTint: 1
 SliderBallFrames: 1
 SliderBallFlip: 0
 SliderStyle: 2
 
-//  Others
+// others
 Version: latest
-//}}}
 
 [Colours]
-//{{{
-// 	Combo
+// combo
 Combo1: 55,255,55
 Combo2: 255,255,32
 Combo3: 255,74,165
 Combo4: 66,255,255
 
-// 	Slider
+// slider
 SliderBorder: 200,200,200
 SliderTrackOverride: 0,0,0
 
-// 	Spinner
+// spinner
 SpinnerApproachCircle: 255,255,255
 SpinnerBackground: 255,255,255
 
-// 	Menu
+// menu
 MenuGlow: 250, 140, 166
 SongSelectActiveText: 255,255,255
 SongSelectInactiveText: 250,250,250
 
-// 	Gameplay
+// gameplay
 InputOverlayText: 255,255,255
-//}}}
 
 [Fonts]
-//{{{
-// 	Hitcircle
+// hitcircle
 HitCirclePrefix: fonts/default/default
 HitCircleOverlap: 23
 
-// 	Score
+// score
 ScorePrefix: fonts/score/score
 ScoreOverlap: -2
 
-// 	Combo
+// combo
 ComboPrefix: fonts/combo_numbers/combo
 ComboOverlap: -2
-//}}}
