--- a/-[ LITEST ]- all-in-one/flavor/etc/skin.mania.ini
+++ b/-[ LITEST ]- all-in-one/flavor/etc/skin.mania.ini
@@ -1,16 +1,9 @@
 
-[CatchTheBeat]
-//{{{
-HyperDash: 250,250,250,255
-HyperDashAfterImage: 106,69,193,100
-HyperDashFruit: 255,0,0,255
-//}}}
-
 [Mania]
 Keys: 4
 //{{{
-ColumnStart: 318
-ColumnWidth: 50,50,50,50
+ColumnStart: 326
+ColumnWidth: 46,46,46,46
 ColumnLineWidth: 0,0,0,0,0
 ColumnSpacing: 4,8,4
 
@@ -21,7 +14,7 @@ ComboPosition: 250
 JudgementLine: 0
 KeysUnderNotes: 1
 
-//  Keys
+// keys
 KeyImage0: mania/keys/k
 KeyImage0D: mania/keys/kd
 KeyImage1: mania/keys/k
@@ -31,7 +24,7 @@ KeyImage2D: mania/keys/kd
 KeyImage3: mania/keys/k
 KeyImage3D: mania/keys/kd
 
-//  Notes
+// notes
 NoteImage0: mania/notes/white
 NoteImage0H: mania/notes/white
 NoteImage0L: mania/notes/noteL-white
@@ -56,9 +49,12 @@ NoteImage3T: mania/notes/noteT-blue
 [Mania]
 Keys: 5
 //{{{
-ColumnStart: 286
-ColumnWidth: 50,50,50,50,50
+// (855 - 220 - 16)/2 = 309.5
+ColumnStart: 309
+// 44*5 = 220
+ColumnWidth: 44,44,44,44,44
 ColumnLineWidth: 0,0,0,0,0,0
+// total = 16
 ColumnSpacing: 4,4,4,4
 
 HitPosition: 420
@@ -68,7 +64,7 @@ ComboPosition: 250
 JudgementLine: 0
 KeysUnderNotes: 1
 
-//  Keys
+// keys
 KeyImage0: mania/keys/k
 KeyImage0D: mania/keys/kd
 KeyImage1: mania/keys/k
@@ -80,7 +76,7 @@ KeyImage3D: mania/keys/kd
 KeyImage4: mania/keys/k
 KeyImage4D: mania/keys/kd
 
-//  Notes
+// notes
 NoteImage0: mania/notes/white
 NoteImage0H: mania/notes/white
 NoteImage0L: mania/notes/noteL-white
@@ -110,10 +106,13 @@ NoteImage4T: mania/notes/noteT-blue
 [Mania]
 Keys: 6
 //{{{
-ColumnStart: 270
-ColumnWidth: 48,48,48,48,48,48
+// (855 - 252 - 26)/2 = 288.5
+ColumnStart: 288
+// 42*6 = 252
+ColumnWidth: 42,42,42,42,42,42
 ColumnLineWidth: 0,0,0,0,0,0,0
-ColumnSpacing: 2,10,2,10,2
+// total = 26
+ColumnSpacing: 4,4,10,4,4
 
 HitPosition: 420
 ScorePosition: 290
@@ -122,7 +121,7 @@ ComboPosition: 250
 JudgementLine: 0
 KeysUnderNotes: 1
 
-//  Keys
+// keys
 KeyImage0: mania/keys/k
 KeyImage0D: mania/keys/kd
 KeyImage1: mania/keys/k
@@ -136,7 +135,7 @@ KeyImage4D: mania/keys/kd
 KeyImage5: mania/keys/k
 KeyImage5D: mania/keys/kd
 
-//  Notes
+// notes
 NoteImage0: mania/notes/white
 NoteImage0H: mania/notes/white
 NoteImage0L: mania/notes/noteL-white
@@ -171,9 +170,12 @@ NoteImage5T: mania/notes/noteT-blue
 [Mania]
 Keys: 7
 //{{{
-ColumnStart: 254
-ColumnWidth: 46,46,46,46,46,46,46
+// (855 - 280 - 24)/2 = 274
+ColumnStart: 274
+// 40*7 = 280
+ColumnWidth: 40,40,40,40,40,40,40
 ColumnLineWidth: 0,0,0,0,0,0,0,0
+// total = 24
 ColumnSpacing: 2,8,2,2,8,2
 
 HitPosition: 420
@@ -183,7 +185,7 @@ ComboPosition: 250
 JudgementLine: 0
 KeysUnderNotes: 1
 
-//  Keys
+// keys
 KeyImage0: mania/keys/k
 KeyImage0D: mania/keys/kd
 KeyImage1: mania/keys/k
@@ -199,7 +201,7 @@ KeyImage5D: mania/keys/kd
 KeyImage6: mania/keys/k
 KeyImage6D: mania/keys/kd
 
-//  Notes
+// notes
 NoteImage0: mania/notes/white
 NoteImage0H: mania/notes/white
 NoteImage0L: mania/notes/noteL-white
@@ -251,7 +253,7 @@ ComboPosition: 250
 JudgementLine: 0
 KeysUnderNotes: 1
 
-//  Keys
+// keys
 KeyImage0: mania/keys/k
 KeyImage0D: mania/keys/kd
 KeyImage1: mania/keys/k
@@ -269,7 +271,7 @@ KeyImage6D: mania/keys/kd
 KeyImage7: mania/keys/k
 KeyImage7D: mania/keys/kd
 
-//  Notes
+// notes
 NoteImage0: mania/notes/white
 NoteImage0H: mania/notes/white
 NoteImage0L: mania/notes/noteL-white
@@ -310,5 +312,3 @@ NoteImage7H: mania/notes/blue
 NoteImage7L: mania/notes/noteL-blue
 NoteImage7T: mania/notes/noteT-blue
 //}}}
-
-// vim: ft=confini fdm=marker
