--- a/-[ LITEST ]- all-in-one/flavor/prjct-X/skin.osu.ini
+++ b/-[ LITEST ]- all-in-one/flavor/prjct-X/skin.osu.ini
@@ -1,61 +1,55 @@
-[General]
-Name: -[ LITEST ]- prjct. X
-Author: Many others & Purple4pur
-//{{{
-// 	Cursor
+
+// Current skin flavor: prjct. X
+
+// cursor
 CursorRotate: 0
 CursorExpand: 0
 CursorCentre: 1
 
-//  Hitcircle
+// hitcircle
 HitCircleOverlayAboveNumber: 0
 
-// 	Slider
+// slider
 AllowSliderBallTint: 1
 SliderBallFrames: 1
 SliderBallFlip: 0
 SliderStyle: 3
 
-//  Others
+// others
 Version: latest
-//}}}
 
 [Colours]
-//{{{
-// 	Combo
+// combo
 Combo1: 170,236,255
 Combo2: 255,155,184
 Combo3: 255,245,178
 Combo4: 184,255,177
 
-// 	Slider
+// slider
 SliderBorder: 96,97,103
 SliderTrackOverride: 47,49,68
 
-// 	Spinner
+// spinner
 SpinnerApproachCircle: 255,255,255
 SpinnerBackground: 255,255,255
 
-// 	Menu
+// menu
 MenuGlow: 250, 140, 166
 SongSelectActiveText: 255,255,255
 SongSelectInactiveText: 250,250,250
 
-// 	Gameplay
+// gameplay
 InputOverlayText: 255,255,255
-//}}}
 
 [Fonts]
-//{{{
-// 	Hitcircle
+// hitcircle
 HitCirclePrefix: fonts/default/default
 HitCircleOverlap: 23
 
-// 	Score
+// score
 ScorePrefix: fonts/score/score
 ScoreOverlap: -2
 
-// 	Combo
+// combo
 ComboPrefix: fonts/combo_numbers/combo
 ComboOverlap: -2
-//}}}
