(generator) automatically generate skin.mania.ini from config

--- a/-[ LITEST ]- all-in-one/flavor/etc/skin.mania.ini
+++ b/-[ LITEST ]- all-in-one/flavor/etc/skin.mania.ini
@@ -1,11 +1,13 @@
 
+// The following part is auto-generatedn.
+// See flavor/etc/config.mania.json for more details.
+
 [Mania]
 Keys: 4
-//{{{
-ColumnStart: 326
-ColumnWidth: 46,46,46,46
+ColumnStart: 323
+ColumnWidth: 44,44,44,44
 ColumnLineWidth: 0,0,0,0,0
-ColumnSpacing: 4,8,4
+ColumnSpacing: 10,10,10
 
 HitPosition: 420
 ScorePosition: 290
@@ -29,33 +31,25 @@ NoteImage0: mania/notes/white
 NoteImage0H: mania/notes/white
 NoteImage0L: mania/notes/noteL-white
 NoteImage0T: mania/notes/noteT-white
-
 NoteImage1: mania/notes/white
 NoteImage1H: mania/notes/white
 NoteImage1L: mania/notes/noteL-white
 NoteImage1T: mania/notes/noteT-white
-
 NoteImage2: mania/notes/blue
 NoteImage2H: mania/notes/blue
 NoteImage2L: mania/notes/noteL-blue
 NoteImage2T: mania/notes/noteT-blue
-
 NoteImage3: mania/notes/blue
 NoteImage3H: mania/notes/blue
 NoteImage3L: mania/notes/noteL-blue
 NoteImage3T: mania/notes/noteT-blue
-//}}}
 
 [Mania]
 Keys: 5
-//{{{
-// (855 - 220 - 16)/2 = 309.5
-ColumnStart: 309
-// 44*5 = 220
+ColumnStart: 304
 ColumnWidth: 44,44,44,44,44
 ColumnLineWidth: 0,0,0,0,0,0
-// total = 16
-ColumnSpacing: 4,4,4,4
+ColumnSpacing: 6,6,6,6
 
 HitPosition: 420
 ScorePosition: 290
@@ -81,38 +75,29 @@ NoteImage0: mania/notes/white
 NoteImage0H: mania/notes/white
 NoteImage0L: mania/notes/noteL-white
 NoteImage0T: mania/notes/noteT-white
-
 NoteImage1: mania/notes/white
 NoteImage1H: mania/notes/white
 NoteImage1L: mania/notes/noteL-white
 NoteImage1T: mania/notes/noteT-white
-
 NoteImage2: mania/notes/yellow
 NoteImage2H: mania/notes/yellow
 NoteImage2L: mania/notes/noteL-yellow
 NoteImage2T: mania/notes/noteT-yellow
-
 NoteImage3: mania/notes/blue
 NoteImage3H: mania/notes/blue
 NoteImage3L: mania/notes/noteL-blue
 NoteImage3T: mania/notes/noteT-blue
-
 NoteImage4: mania/notes/blue
 NoteImage4H: mania/notes/blue
 NoteImage4L: mania/notes/noteL-blue
 NoteImage4T: mania/notes/noteT-blue
-//}}}
 
 [Mania]
 Keys: 6
-//{{{
-// (855 - 252 - 26)/2 = 288.5
-ColumnStart: 288
-// 42*6 = 252
-ColumnWidth: 42,42,42,42,42,42
+ColumnStart: 291
+ColumnWidth: 40,40,40,40,40,40
 ColumnLineWidth: 0,0,0,0,0,0,0
-// total = 26
-ColumnSpacing: 4,4,10,4,4
+ColumnSpacing: 6,6,6,6,6
 
 HitPosition: 420
 ScorePosition: 290
@@ -140,43 +125,33 @@ NoteImage0: mania/notes/white
 NoteImage0H: mania/notes/white
 NoteImage0L: mania/notes/noteL-white
 NoteImage0T: mania/notes/noteT-white
-
 NoteImage1: mania/notes/white
 NoteImage1H: mania/notes/white
 NoteImage1L: mania/notes/noteL-white
 NoteImage1T: mania/notes/noteT-white
-
 NoteImage2: mania/notes/white
 NoteImage2H: mania/notes/white
 NoteImage2L: mania/notes/noteL-white
 NoteImage2T: mania/notes/noteT-white
-
 NoteImage3: mania/notes/blue
 NoteImage3H: mania/notes/blue
 NoteImage3L: mania/notes/noteL-blue
 NoteImage3T: mania/notes/noteT-blue
-
 NoteImage4: mania/notes/blue
 NoteImage4H: mania/notes/blue
 NoteImage4L: mania/notes/noteL-blue
 NoteImage4T: mania/notes/noteT-blue
-
 NoteImage5: mania/notes/blue
 NoteImage5H: mania/notes/blue
 NoteImage5L: mania/notes/noteL-blue
 NoteImage5T: mania/notes/noteT-blue
-//}}}
 
 [Mania]
 Keys: 7
-//{{{
-// (855 - 280 - 24)/2 = 274
-ColumnStart: 274
-// 40*7 = 280
-ColumnWidth: 40,40,40,40,40,40,40
+ColumnStart: 278
+ColumnWidth: 38,38,38,38,38,38,38
 ColumnLineWidth: 0,0,0,0,0,0,0,0
-// total = 24
-ColumnSpacing: 2,8,2,2,8,2
+ColumnSpacing: 5,5,5,5,5,5
 
 HitPosition: 420
 ScorePosition: 290
@@ -206,109 +181,27 @@ NoteImage0: mania/notes/white
 NoteImage0H: mania/notes/white
 NoteImage0L: mania/notes/noteL-white
 NoteImage0T: mania/notes/noteT-white
-
 NoteImage1: mania/notes/white
 NoteImage1H: mania/notes/white
 NoteImage1L: mania/notes/noteL-white
 NoteImage1T: mania/notes/noteT-white
-
 NoteImage2: mania/notes/white
 NoteImage2H: mania/notes/white
 NoteImage2L: mania/notes/noteL-white
 NoteImage2T: mania/notes/noteT-white
-
 NoteImage3: mania/notes/yellow
 NoteImage3H: mania/notes/yellow
 NoteImage3L: mania/notes/noteL-yellow
 NoteImage3T: mania/notes/noteT-yellow
-
 NoteImage4: mania/notes/blue
 NoteImage4H: mania/notes/blue
 NoteImage4L: mania/notes/noteL-blue
 NoteImage4T: mania/notes/noteT-blue
-
 NoteImage5: mania/notes/blue
 NoteImage5H: mania/notes/blue
 NoteImage5L: mania/notes/noteL-blue
 NoteImage5T: mania/notes/noteT-blue
-
 NoteImage6: mania/notes/blue
 NoteImage6H: mania/notes/blue
 NoteImage6L: mania/notes/noteL-blue
 NoteImage6T: mania/notes/noteT-blue
-//}}}
-
-[Mania]
-Keys: 8
-//{{{
-ColumnStart: 232
-ColumnWidth: 44,44,44,44,44,44,44,44
-ColumnLineWidth: 0,0,0,0,0,0,0,0,0
-ColumnSpacing: 2,8,2,12,2,8,2
-
-HitPosition: 420
-ScorePosition: 290
-ComboPosition: 250
-
-JudgementLine: 0
-KeysUnderNotes: 1
-
-// keys
-KeyImage0: mania/keys/k
-KeyImage0D: mania/keys/kd
-KeyImage1: mania/keys/k
-KeyImage1D: mania/keys/kd
-KeyImage2: mania/keys/k
-KeyImage2D: mania/keys/kd
-KeyImage3: mania/keys/k
-KeyImage3D: mania/keys/kd
-KeyImage4: mania/keys/k
-KeyImage4D: mania/keys/kd
-KeyImage5: mania/keys/k
-KeyImage5D: mania/keys/kd
-KeyImage6: mania/keys/k
-KeyImage6D: mania/keys/kd
-KeyImage7: mania/keys/k
-KeyImage7D: mania/keys/kd
-
-// notes
-NoteImage0: mania/notes/white
-NoteImage0H: mania/notes/white
-NoteImage0L: mania/notes/noteL-white
-NoteImage0T: mania/notes/noteT-white
-
-NoteImage1: mania/notes/white
-NoteImage1H: mania/notes/white
-NoteImage1L: mania/notes/noteL-white
-NoteImage1T: mania/notes/noteT-white
-
-NoteImage2: mania/notes/white
-NoteImage2H: mania/notes/white
-NoteImage2L: mania/notes/noteL-white
-NoteImage2T: mania/notes/noteT-white
-
-NoteImage3: mania/notes/yellow
-NoteImage3H: mania/notes/yellow
-NoteImage3L: mania/notes/noteL-yellow
-NoteImage3T: mania/notes/noteT-yellow
-
-NoteImage4: mania/notes/yellow
-NoteImage4H: mania/notes/yellow
-NoteImage4L: mania/notes/noteL-yellow
-NoteImage4T: mania/notes/noteT-yellow
-
-NoteImage5: mania/notes/blue
-NoteImage5H: mania/notes/blue
-NoteImage5L: mania/notes/noteL-blue
-NoteImage5T: mania/notes/noteT-blue
-
-NoteImage6: mania/notes/blue
-NoteImage6H: mania/notes/blue
-NoteImage6L: mania/notes/noteL-blue
-NoteImage6T: mania/notes/noteT-blue
-
-NoteImage7: mania/notes/blue
-NoteImage7H: mania/notes/blue
-NoteImage7L: mania/notes/noteL-blue
-NoteImage7T: mania/notes/noteT-blue
-//}}}
