--- a/-[ LITEST ]- all-in-one/flavor/etc/skin.mania.ini
+++ b/-[ LITEST ]- all-in-one/flavor/etc/skin.mania.ini
@@ -1,11 +1,11 @@
 
-// The following part is auto-generatedn.
+// The following part is auto-generated.
 // See flavor/etc/config.mania.json for more details.
 
 [Mania]
 Keys: 4
-ColumnStart: 323
-ColumnWidth: 44,44,44,44
+ColumnStart: 359
+ColumnWidth: 26,26,26,26
 ColumnLineWidth: 0,0,0,0,0
 ColumnSpacing: 10,10,10
 
@@ -46,8 +46,8 @@ NoteImage3T: mania/notes/noteT-blue
 
 [Mania]
 Keys: 5
-ColumnStart: 304
-ColumnWidth: 44,44,44,44,44
+ColumnStart: 349
+ColumnWidth: 26,26,26,26,26
 ColumnLineWidth: 0,0,0,0,0,0
 ColumnSpacing: 6,6,6,6
 
@@ -94,8 +94,8 @@ NoteImage4T: mania/notes/noteT-blue
 
 [Mania]
 Keys: 6
-ColumnStart: 291
-ColumnWidth: 40,40,40,40,40,40
+ColumnStart: 339
+ColumnWidth: 24,24,24,24,24,24
 ColumnLineWidth: 0,0,0,0,0,0,0
 ColumnSpacing: 6,6,6,6,6
 
@@ -123,33 +123,33 @@ KeyImage5D: mania/keys/kd
 // notes
 NoteImage0: mania/notes/white
 NoteImage0H: mania/notes/white
-NoteImage0L: mania/notes/noteL-white
-NoteImage0T: mania/notes/noteT-white
+NoteImage0L: mania/notes/noteL
+NoteImage0T: mania/notes/noteT
 NoteImage1: mania/notes/white
 NoteImage1H: mania/notes/white
-NoteImage1L: mania/notes/noteL-white
-NoteImage1T: mania/notes/noteT-white
+NoteImage1L: mania/notes/noteL
+NoteImage1T: mania/notes/noteT
 NoteImage2: mania/notes/white
 NoteImage2H: mania/notes/white
-NoteImage2L: mania/notes/noteL-white
-NoteImage2T: mania/notes/noteT-white
+NoteImage2L: mania/notes/noteL
+NoteImage2T: mania/notes/noteT
 NoteImage3: mania/notes/blue
 NoteImage3H: mania/notes/blue
-NoteImage3L: mania/notes/noteL-blue
-NoteImage3T: mania/notes/noteT-blue
+NoteImage3L: mania/notes/noteL
+NoteImage3T: mania/notes/noteT
 NoteImage4: mania/notes/blue
 NoteImage4H: mania/notes/blue
-NoteImage4L: mania/notes/noteL-blue
-NoteImage4T: mania/notes/noteT-blue
+NoteImage4L: mania/notes/noteL
+NoteImage4T: mania/notes/noteT
 NoteImage5: mania/notes/blue
 NoteImage5H: mania/notes/blue
-NoteImage5L: mania/notes/noteL-blue
-NoteImage5T: mania/notes/noteT-blue
+NoteImage5L: mania/notes/noteL
+NoteImage5T: mania/notes/noteT
 
 [Mania]
 Keys: 7
-ColumnStart: 278
-ColumnWidth: 38,38,38,38,38,38,38
+ColumnStart: 327
+ColumnWidth: 24,24,24,24,24,24,24
 ColumnLineWidth: 0,0,0,0,0,0,0,0
 ColumnSpacing: 5,5,5,5,5,5
 
@@ -179,29 +179,29 @@ KeyImage6D: mania/keys/kd
 // notes
 NoteImage0: mania/notes/white
 NoteImage0H: mania/notes/white
-NoteImage0L: mania/notes/noteL-white
-NoteImage0T: mania/notes/noteT-white
+NoteImage0L: mania/notes/noteL
+NoteImage0T: mania/notes/noteT
 NoteImage1: mania/notes/white
 NoteImage1H: mania/notes/white
-NoteImage1L: mania/notes/noteL-white
-NoteImage1T: mania/notes/noteT-white
+NoteImage1L: mania/notes/noteL
+NoteImage1T: mania/notes/noteT
 NoteImage2: mania/notes/white
 NoteImage2H: mania/notes/white
-NoteImage2L: mania/notes/noteL-white
-NoteImage2T: mania/notes/noteT-white
+NoteImage2L: mania/notes/noteL
+NoteImage2T: mania/notes/noteT
 NoteImage3: mania/notes/yellow
 NoteImage3H: mania/notes/yellow
-NoteImage3L: mania/notes/noteL-yellow
-NoteImage3T: mania/notes/noteT-yellow
+NoteImage3L: mania/notes/noteL
+NoteImage3T: mania/notes/noteT
 NoteImage4: mania/notes/blue
 NoteImage4H: mania/notes/blue
-NoteImage4L: mania/notes/noteL-blue
-NoteImage4T: mania/notes/noteT-blue
+NoteImage4L: mania/notes/noteL
+NoteImage4T: mania/notes/noteT
 NoteImage5: mania/notes/blue
 NoteImage5H: mania/notes/blue
-NoteImage5L: mania/notes/noteL-blue
-NoteImage5T: mania/notes/noteT-blue
+NoteImage5L: mania/notes/noteL
+NoteImage5T: mania/notes/noteT
 NoteImage6: mania/notes/blue
 NoteImage6H: mania/notes/blue
-NoteImage6L: mania/notes/noteL-blue
-NoteImage6T: mania/notes/noteT-blue
+NoteImage6L: mania/notes/noteL
+NoteImage6T: mania/notes/noteT
