(mania) rename note images; fix width of keystroke images

--- a/-[ LITEST ]- all-in-one/flavor/etc/skin.mania.ini
+++ b/-[ LITEST ]- all-in-one/flavor/etc/skin.mania.ini
@@ -27,20 +27,20 @@ KeyImage3: mania/keys/k
 KeyImage3D: mania/keys/kd
 
 // notes
-NoteImage0: mania/notes/white
-NoteImage0H: mania/notes/white
+NoteImage0: mania/notes/note-white
+NoteImage0H: mania/notes/note-white
 NoteImage0L: mania/notes/noteL-white
 NoteImage0T: mania/notes/noteT-white
-NoteImage1: mania/notes/white
-NoteImage1H: mania/notes/white
+NoteImage1: mania/notes/note-white
+NoteImage1H: mania/notes/note-white
 NoteImage1L: mania/notes/noteL-white
 NoteImage1T: mania/notes/noteT-white
-NoteImage2: mania/notes/blue
-NoteImage2H: mania/notes/blue
+NoteImage2: mania/notes/note-blue
+NoteImage2H: mania/notes/note-blue
 NoteImage2L: mania/notes/noteL-blue
 NoteImage2T: mania/notes/noteT-blue
-NoteImage3: mania/notes/blue
-NoteImage3H: mania/notes/blue
+NoteImage3: mania/notes/note-blue
+NoteImage3H: mania/notes/note-blue
 NoteImage3L: mania/notes/noteL-blue
 NoteImage3T: mania/notes/noteT-blue
 
@@ -71,24 +71,24 @@ KeyImage4: mania/keys/k
 KeyImage4D: mania/keys/kd
 
 // notes
-NoteImage0: mania/notes/white
-NoteImage0H: mania/notes/white
+NoteImage0: mania/notes/note-white
+NoteImage0H: mania/notes/note-white
 NoteImage0L: mania/notes/noteL-white
 NoteImage0T: mania/notes/noteT-white
-NoteImage1: mania/notes/white
-NoteImage1H: mania/notes/white
+NoteImage1: mania/notes/note-white
+NoteImage1H: mania/notes/note-white
 NoteImage1L: mania/notes/noteL-white
 NoteImage1T: mania/notes/noteT-white
-NoteImage2: mania/notes/yellow
-NoteImage2H: mania/notes/yellow
+NoteImage2: mania/notes/note-yellow
+NoteImage2H: mania/notes/note-yellow
 NoteImage2L: mania/notes/noteL-yellow
 NoteImage2T: mania/notes/noteT-yellow
-NoteImage3: mania/notes/blue
-NoteImage3H: mania/notes/blue
+NoteImage3: mania/notes/note-blue
+NoteImage3H: mania/notes/note-blue
 NoteImage3L: mania/notes/noteL-blue
 NoteImage3T: mania/notes/noteT-blue
-NoteImage4: mania/notes/blue
-NoteImage4H: mania/notes/blue
+NoteImage4: mania/notes/note-blue
+NoteImage4H: mania/notes/note-blue
 NoteImage4L: mania/notes/noteL-blue
 NoteImage4T: mania/notes/noteT-blue
 
@@ -121,28 +121,28 @@ KeyImage5: mania/keys/k
 KeyImage5D: mania/keys/kd
 
 // notes
-NoteImage0: mania/notes/white
-NoteImage0H: mania/notes/white
+NoteImage0: mania/notes/note-white
+NoteImage0H: mania/notes/note-white
 NoteImage0L: mania/notes/noteL
 NoteImage0T: mania/notes/noteT
-NoteImage1: mania/notes/white
-NoteImage1H: mania/notes/white
+NoteImage1: mania/notes/note-white
+NoteImage1H: mania/notes/note-white
 NoteImage1L: mania/notes/noteL
 NoteImage1T: mania/notes/noteT
-NoteImage2: mania/notes/white
-NoteImage2H: mania/notes/white
+NoteImage2: mania/notes/note-white
+NoteImage2H: mania/notes/note-white
 NoteImage2L: mania/notes/noteL
 NoteImage2T: mania/notes/noteT
-NoteImage3: mania/notes/blue
-NoteImage3H: mania/notes/blue
+NoteImage3: mania/notes/note-blue
+NoteImage3H: mania/notes/note-blue
 NoteImage3L: mania/notes/noteL
 NoteImage3T: mania/notes/noteT
-NoteImage4: mania/notes/blue
-NoteImage4H: mania/notes/blue
+NoteImage4: mania/notes/note-blue
+NoteImage4H: mania/notes/note-blue
 NoteImage4L: mania/notes/noteL
 NoteImage4T: mania/notes/noteT
-NoteImage5: mania/notes/blue
-NoteImage5H: mania/notes/blue
+NoteImage5: mania/notes/note-blue
+NoteImage5H: mania/notes/note-blue
 NoteImage5L: mania/notes/noteL
 NoteImage5T: mania/notes/noteT
 
@@ -177,31 +177,31 @@ KeyImage6: mania/keys/k
 KeyImage6D: mania/keys/kd
 
 // notes
-NoteImage0: mania/notes/white
-NoteImage0H: mania/notes/white
+NoteImage0: mania/notes/note-white
+NoteImage0H: mania/notes/note-white
 NoteImage0L: mania/notes/noteL
 NoteImage0T: mania/notes/noteT
-NoteImage1: mania/notes/white
-NoteImage1H: mania/notes/white
+NoteImage1: mania/notes/note-white
+NoteImage1H: mania/notes/note-white
 NoteImage1L: mania/notes/noteL
 NoteImage1T: mania/notes/noteT
-NoteImage2: mania/notes/white
-NoteImage2H: mania/notes/white
+NoteImage2: mania/notes/note-white
+NoteImage2H: mania/notes/note-white
 NoteImage2L: mania/notes/noteL
 NoteImage2T: mania/notes/noteT
-NoteImage3: mania/notes/yellow
-NoteImage3H: mania/notes/yellow
+NoteImage3: mania/notes/note-yellow
+NoteImage3H: mania/notes/note-yellow
 NoteImage3L: mania/notes/noteL
 NoteImage3T: mania/notes/noteT
-NoteImage4: mania/notes/blue
-NoteImage4H: mania/notes/blue
+NoteImage4: mania/notes/note-blue
+NoteImage4H: mania/notes/note-blue
 NoteImage4L: mania/notes/noteL
 NoteImage4T: mania/notes/noteT
-NoteImage5: mania/notes/blue
-NoteImage5H: mania/notes/blue
+NoteImage5: mania/notes/note-blue
+NoteImage5H: mania/notes/note-blue
 NoteImage5L: mania/notes/noteL
 NoteImage5T: mania/notes/noteT
-NoteImage6: mania/notes/blue
-NoteImage6H: mania/notes/blue
+NoteImage6: mania/notes/note-blue
+NoteImage6H: mania/notes/note-blue
 NoteImage6L: mania/notes/noteL
 NoteImage6T: mania/notes/noteT
