--- a/-[ LITEST ]- all-in-one/skin.ini
+++ b/-[ LITEST ]- all-in-one/skin.ini
@@ -139,24 +139,24 @@ KeyImage4D: mania/keys/kd
 // notes
 NoteImage0: mania/notes/note-white
 NoteImage0H: mania/notes/note-white
-NoteImage0L: mania/notes/noteL-white
-NoteImage0T: mania/notes/noteT-white
+NoteImage0L: mania/notes/noteL
+NoteImage0T: mania/notes/noteT
 NoteImage1: mania/notes/note-white
 NoteImage1H: mania/notes/note-white
-NoteImage1L: mania/notes/noteL-white
-NoteImage1T: mania/notes/noteT-white
+NoteImage1L: mania/notes/noteL
+NoteImage1T: mania/notes/noteT
 NoteImage2: mania/notes/note-yellow
 NoteImage2H: mania/notes/note-yellow
-NoteImage2L: mania/notes/noteL-yellow
-NoteImage2T: mania/notes/noteT-yellow
+NoteImage2L: mania/notes/noteL
+NoteImage2T: mania/notes/noteT
 NoteImage3: mania/notes/note-blue
 NoteImage3H: mania/notes/note-blue
-NoteImage3L: mania/notes/noteL-blue
-NoteImage3T: mania/notes/noteT-blue
+NoteImage3L: mania/notes/noteL
+NoteImage3T: mania/notes/noteT
 NoteImage4: mania/notes/note-blue
 NoteImage4H: mania/notes/note-blue
-NoteImage4L: mania/notes/noteL-blue
-NoteImage4T: mania/notes/noteT-blue
+NoteImage4L: mania/notes/noteL
+NoteImage4T: mania/notes/noteT
 
 [Mania]
 Keys: 6
