--- a/-[ LITEST ]- all-in-one/mania/skin.mania.ini
+++ b/-[ LITEST ]- all-in-one/mania/skin.mania.ini
@@ -1,13 +1,12 @@
 
 // The following part is auto-generated.
-// See flavor/etc/config.mania.json for more details.
 
 [Mania]
 Keys: 4
-ColumnStart: 359
-ColumnWidth: 26,26,26,26
+ColumnStart: 333
+ColumnWidth: 42,42,42,42
 ColumnLineWidth: 0,0,0,0,0
-ColumnSpacing: 10,10,10
+ColumnSpacing: 6,6,6
 
 HitPosition: 420
 ScorePosition: 290
@@ -29,25 +28,25 @@ KeyImage3D: mania/keys/kd
 // notes
 NoteImage0: mania/notes/note-white
 NoteImage0H: mania/notes/note-white
-NoteImage0L: mania/notes/noteL-white
-NoteImage0T: mania/notes/noteT-white
+NoteImage0L: mania/notes/noteL
+NoteImage0T: mania/notes/noteT
 NoteImage1: mania/notes/note-white
 NoteImage1H: mania/notes/note-white
-NoteImage1L: mania/notes/noteL-white
-NoteImage1T: mania/notes/noteT-white
+NoteImage1L: mania/notes/noteL
+NoteImage1T: mania/notes/noteT
 NoteImage2: mania/notes/note-blue
 NoteImage2H: mania/notes/note-blue
-NoteImage2L: mania/notes/noteL-blue
-NoteImage2T: mania/notes/noteT-blue
+NoteImage2L: mania/notes/noteL
+NoteImage2T: mania/notes/noteT
 NoteImage3: mania/notes/note-blue
 NoteImage3H: mania/notes/note-blue
-NoteImage3L: mania/notes/noteL-blue
-NoteImage3T: mania/notes/noteT-blue
+NoteImage3L: mania/notes/noteL
+NoteImage3T: mania/notes/noteT
 
 [Mania]
 Keys: 5
-ColumnStart: 349
-ColumnWidth: 26,26,26,26,26
+ColumnStart: 309
+ColumnWidth: 42,42,42,42,42
 ColumnLineWidth: 0,0,0,0,0,0
 ColumnSpacing: 6,6,6,6
 
@@ -94,8 +93,8 @@ NoteImage4T: mania/notes/noteT
 
 [Mania]
 Keys: 6
-ColumnStart: 339
-ColumnWidth: 24,24,24,24,24,24
+ColumnStart: 285
+ColumnWidth: 42,42,42,42,42,42
 ColumnLineWidth: 0,0,0,0,0,0,0
 ColumnSpacing: 6,6,6,6,6
 
@@ -148,10 +147,10 @@ NoteImage5T: mania/notes/noteT
 
 [Mania]
 Keys: 7
-ColumnStart: 327
-ColumnWidth: 24,24,24,24,24,24,24
+ColumnStart: 261
+ColumnWidth: 42,42,42,42,42,42,42
 ColumnLineWidth: 0,0,0,0,0,0,0,0
-ColumnSpacing: 5,5,5,5,5,5
+ColumnSpacing: 6,6,6,6,6,6
 
 HitPosition: 420
 ScorePosition: 290
