minor fix, ready for v3.3.0 release

--- a/LITE/skin.ini
+++ b/LITE/skin.ini
@@ -1,7 +1,7 @@
 // This file is auto-generated.
 
 [General]
-Name: -[ LITEST ]- all-in-one
+Name: LITE
 Author: Many others & Purple4pur
 // ReleaseVersion: v3.3.0
 
